--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Documents{% endblock %}
+{% block title %}Nouveau document{% endblock %}
 
 {% block body %}
 
