--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Profil Index
+	Dashboard Profil
 {% endblock %}
 
 
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('absences_index') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('absences_index') }}" class="btn bgc-pink rounded-pill float-right">
 							Valider une absence
 						</a>
 					</div>
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -237,7 +237,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">Ajouter un employé</a>
+						<a href="{{ path('employe_new') }}" class="btn bgc-pink rounded-pill float-right">Ajouter un employé</a>
 					</div>
 				</div>
 			</div>
@@ -277,7 +277,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
@@ -328,7 +328,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('absences_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('absences_new') }}" class="btn bgc-pink rounded-pill float-right">
 							Valider une absence
 						</a>
 					</div>
@@ -361,7 +361,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">Modifier profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -409,7 +409,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('absences_new') }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('absences_new') }}" class="btn bgc-pink rounded-pill float-right">
 							Valider une absence
 						</a>
 					</div>
@@ -451,7 +451,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink btn-primary rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
@@ -483,7 +483,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">Modifier profil</a>
+						<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">Modifier profil</a>
 					</div>
 				</div>
 			</div>
@@ -527,7 +527,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('employe_absences_new') }}" class="btn btn-primary bgc-pink rounded-pill float-right">Signaler une absence</a>
+						<a href="{{ path('employe_absences_new') }}" class="btn bgc-pink rounded-pill float-right">Signaler une absence</a>
 					</div>
 				</div>
 			</div>
@@ -567,7 +567,7 @@
 						</div>
 					</div>
 					<div class="card-footer cardFooter">
-						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn btn-primary bgc-pink rounded-pill float-right">
+						<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn bgc-pink rounded-pill float-right">
 							Partager un document
 						</a>
 					</div>
