--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,7 +13,7 @@ $color4: #286fb4;
 $color5: #ffffff;
 $color6: #df4c73;
 
-$color10: red;
+$color10: #d9534f;
 
 $color7:  rgba(255, 255, 255, 1);
 $color8: rgba(255, 255, 255, 0);
