--- a/templates/documents/_delete_form.html.twig
+++ b/templates/documents/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('documents_delete', {'id': document.id}) }}" onsubmit="return confirm('Êtes-vous certain(e) de vouloir supprimer cette absence ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ document.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn btn-rouge">Supprimer</button>
 </form>
