--- a/templates/employe/_delete_form.html.twig
+++ b/templates/employe/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('employe_delete', {'id': employe.id}) }}" onsubmit="return confirm('Êtes vous sûr de vouloir effacer ce profil?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ employe.id) }}">
-    <button class="btn rounded-pill btn-danger mr-1">Effacer</button>
+    <button class="btn rounded-pill btn-rouge mr-1">Effacer</button>
 </form>
