--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -68,11 +68,12 @@
 														<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 														<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 													</div>
-													<div class="row align-items-center text-dark remember">
+													{# <div class="row align-items-center text-dark remember"> #}
 														<input type="checkbox" class="text-dark">
 														Se souvenir de moi
-														<a href="#" class="link ml-3">Mot de passe oublié ?</a>
-													</div>
+														<span class="mdpforget"><p>Mot de passe oublié ?</p></span>
+														<div class="popup">Si vous n'avez pas vos identifiants de connexion, veuillez vous rapprocher de votre manager ou responsable des ressources humaines. <br> <span class="mdpforget"><i class="fas fa-times"></i></span></div>
+													{# </div> #}
 													<div class="form-group mt-3">
 														<input type="submit" value="Se connecter" class="btn rounded-pill bgc-pink btnConnexion">
 													</div>
