--- a/templates/employe/show.html.twig
+++ b/templates/employe/show.html.twig
@@ -39,15 +39,15 @@
                                     </tr>
                                     <tr>
                                         <th>Nom</th>
-                                        <td>{{ employe.nom }}</td>
+                                        <td>{{ employe.nom|capitalize }}</td>
                                     </tr>
                                     <tr>
                                         <th>Prénom</th>
-                                        <td>{{ employe.prenom }}</td>
+                                        <td>{{ employe.prenom|capitalize }}</td>
                                     </tr>
                                     <tr>
                                         <th>Service</th>
-                                        <td>{{ employe.service }}</td>
+                                        <td>{{ employe.service|capitalize }}</td>
                                     </tr>
                                     <tr>
                                         <th>Solde de congés</th>
