--- a/templates/absences/edit.html.twig
+++ b/templates/absences/edit.html.twig
@@ -19,9 +19,6 @@
                             <div class='d-inline-flex'>
                                 <a class='d-block btn rounded-pill btn-bleu mr-1' href="{{ path('absences_index') }}">Retour à la liste</a>
                                 {{ include('absences/_delete_form.html.twig') }}
-                                {% if (app.user.roles[0] == 'ROLE_ADMIN') or (app.user.roles[0] == 'ROLE_RH') or (app.user.roles[0] == 'ROLE_MANAGER')%}
-                                <a class='btn bgc-pink rounded-pill mr-1' href="{{ path('absences_validation', {'id': absence.id}) }}">Valider</a>
-                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -33,3 +30,5 @@
 
 
 {% endblock %}
+
+{% block footer %}{% endblock %}
