--- a/templates/documents/documentsRecus.html.twig
+++ b/templates/documents/documentsRecus.html.twig
@@ -11,7 +11,7 @@
 					<div class="d-flex">
 						<div class="card-body">
 							<h6 class="card-title">
-								Docuemnts Reçus
+								Documents Reçus
 							</h6>
 							<table class="table table-bordered table-striped">
                                 <thead class='thead-dark'>
