--- a/templates/sidemenu.html.twig
+++ b/templates/sidemenu.html.twig
@@ -103,7 +103,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Absences à valider</a>
+						<a href="{{ path('absences_liste_validation') }}">Absences à valider</a>
 					</p>
 				</span>
 
