--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,6 +7,7 @@
 {% block menu %}{% endblock %}
 {% block body %}{% endblock %}
 {% block nav %}{% endblock %}
+{% block footer %}{% endblock %}
 
 {% block connexion %}
 
